Fix page scrolling behind modal bug
Fixes issue #7

--- a/photography-gallery/wwwroot/css/site.css
+++ b/photography-gallery/wwwroot/css/site.css
@@ -22,6 +22,7 @@ html {
 
 body {
     margin: 40px 0;
+    overflow-y: scroll;
 }
 
 a {
